# kak-emoji

./: Cargo.toml  LICENSE.md  README.md  build.rs
resources/: emoji.json
src/: main.rs
