[package]
name = "kak-emoji"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", default-features = false }
serde = { version = "1.0.225", default-features = false, features = ["derive", "std"] }
trie-rs = { version = "0.4.2", features = ["serde"] }

[build-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.225", features = ["std", "derive"] }
serde_json = "1.0.145"
trie-rs = { version = "0.4.2", features = ["serde"] }
